<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home"
        android:enabled="true"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/nav_cart"
        android:enabled="true"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/nav_orders"
        android:enabled="true"
        android:checkable="true"/>

    <item
        android:id="@+id/nav_alerts"
        android:icon="@drawable/ic_notifications"
        android:title="@string/nav_alerts"
        android:enabled="true"
        android:checkable="true"/>


    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile"
        android:enabled="true" />

</menu>
